@@ -679,8 +679,8 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 					    ic->norm.normal->im->rgb_height);
 			       PastePixmap(disp, tt->win,
 					   Imlib_copy_image(id,
-							    ic->norm.
-							    normal->im),
+							    ic->norm.normal->
+							    im),
 					   Imlib_copy_mask(id,
 							   ic->norm.normal->im),
 					   x, y);
@@ -702,12 +702,11 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 					       ic->norm.normal->im->rgb_height);
 				  PastePixmap(disp, tt->win,
 					      Imlib_copy_image(id,
-							       ic->norm.
-							       normal->im),
+							       ic->norm.normal->
+							       im),
 					      Imlib_copy_mask(id,
-							      ic->norm.
-							      normal->im), x,
-					      y);
+							      ic->norm.normal->
+							      im), x, y);
 				  x += ic->norm.normal->im->rgb_width;
 			       }
 			  break;
@@ -723,12 +722,11 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 					       ic->norm.normal->im->rgb_height);
 				  PastePixmap(disp, tt->win,
 					      Imlib_copy_image(id,
-							       ic->norm.
-							       normal->im),
+							       ic->norm.normal->
+							       im),
 					      Imlib_copy_mask(id,
-							      ic->norm.
-							      normal->im), x,
-					      y);
+							      ic->norm.normal->
+							      im), x, y);
 				  x += ic->norm.normal->im->rgb_width;
 			       }
 			  break;
@@ -744,12 +742,11 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 					       ic->norm.normal->im->rgb_height);
 				  PastePixmap(disp, tt->win,
 					      Imlib_copy_image(id,
-							       ic->norm.
-							       normal->im),
+							       ic->norm.normal->
+							       im),
 					      Imlib_copy_mask(id,
-							      ic->norm.
-							      normal->im), x,
-					      y);
+							      ic->norm.normal->
+							      im), x, y);
 				  x += ic->norm.normal->im->rgb_width;
 			       }
 			  break;
@@ -765,12 +762,11 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 					       ic->norm.normal->im->rgb_height);
 				  PastePixmap(disp, tt->win,
 					      Imlib_copy_image(id,
-							       ic->norm.
-							       normal->im),
+							       ic->norm.normal->
+							       im),
 					      Imlib_copy_mask(id,
-							      ic->norm.
-							      normal->im), x,
-					      y);
+							      ic->norm.normal->
+							      im), x, y);
 				  x += ic->norm.normal->im->rgb_width;
 			       }
 			  break;
@@ -786,12 +782,11 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 					       ic->norm.normal->im->rgb_height);
 				  PastePixmap(disp, tt->win,
 					      Imlib_copy_image(id,
-							       ic->norm.
-							       normal->im),
+							       ic->norm.normal->
+							       im),
 					      Imlib_copy_mask(id,
-							      ic->norm.
-							      normal->im), x,
-					      y);
+							      ic->norm.normal->
+							      im), x, y);
 				  x += ic->norm.normal->im->rgb_width;
 			       }
 			  break;
@@ -811,17 +806,16 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->
-						 im->rgb_height);
+						 ic->norm.normal->im->
+						 rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->
-								 norm.normal->
-								 im),
+								 ic->norm.
+								 normal->im),
 						Imlib_copy_mask(id,
-								ic->
-								norm.normal->
-								im), x, y);
+								ic->norm.
+								normal->im), x,
+						y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
@@ -835,17 +829,16 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->
-						 im->rgb_height);
+						 ic->norm.normal->im->
+						 rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->
-								 norm.normal->
-								 im),
+								 ic->norm.
+								 normal->im),
 						Imlib_copy_mask(id,
-								ic->
-								norm.normal->
-								im), x, y);
+								ic->norm.
+								normal->im), x,
+						y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
@@ -859,17 +852,16 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->
-						 im->rgb_height);
+						 ic->norm.normal->im->
+						 rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->
-								 norm.normal->
-								 im),
+								 ic->norm.
+								 normal->im),
 						Imlib_copy_mask(id,
-								ic->
-								norm.normal->
-								im), x, y);
+								ic->norm.
+								normal->im), x,
+						y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
@@ -883,17 +875,16 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->
-						 im->rgb_height);
+						 ic->norm.normal->im->
+						 rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->
-								 norm.normal->
-								 im),
+								 ic->norm.
+								 normal->im),
 						Imlib_copy_mask(id,
-								ic->
-								norm.normal->
-								im), x, y);
+								ic->norm.
+								normal->im), x,
+						y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
@@ -907,17 +898,16 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->
-						 im->rgb_height);
+						 ic->norm.normal->im->
+						 rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->
-								 norm.normal->
-								 im),
+								 ic->norm.
+								 normal->im),
 						Imlib_copy_mask(id,
-								ic->
-								norm.normal->
-								im), x, y);
+								ic->norm.
+								normal->im), x,
+						y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
@@ -931,17 +921,16 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->
-						 im->rgb_height);
+						 ic->norm.normal->im->
+						 rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->
-								 norm.normal->
-								 im),
+								 ic->norm.
+								 normal->im),
 						Imlib_copy_mask(id,
-								ic->
-								norm.normal->
-								im), x, y);
+								ic->norm.
+								normal->im), x,
+						y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
@@ -955,17 +944,16 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->
-						 im->rgb_height);
+						 ic->norm.normal->im->
+						 rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->
-								 norm.normal->
-								 im),
+								 ic->norm.
+								 normal->im),
 						Imlib_copy_mask(id,
-								ic->
-								norm.normal->
-								im), x, y);
+								ic->norm.
+								normal->im), x,
+						y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
@@ -979,17 +967,16 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->
-						 im->rgb_height);
+						 ic->norm.normal->im->
+						 rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->
-								 norm.normal->
-								 im),
+								 ic->norm.
+								 normal->im),
 						Imlib_copy_mask(id,
-								ic->
-								norm.normal->
-								im), x, y);
+								ic->norm.
+								normal->im), x,
+						y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
